1.9/kubernetes/taskmanager-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flink-taskmanager
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: flink
        component: taskmanager
    spec:
      containers:
      - name: taskmanager
        image: gary0416/flink:1.9.0-hadoop27-scala_2.11-alpine
        imagePullPolicy: Always
        args:
        - taskmanager
        volumeMounts:
          - name: hdfs-conf
            mountPath: /etc/hadoop/conf
          - name: flink-conf
            mountPath: /opt/flink/conf-template
        ports:
        - containerPort: 6121
          name: data
        - containerPort: 6122
          name: rpc
        - containerPort: 6123
          name: mine
        - containerPort: 6125
          name: query
        resources:
          requests:
            memory: "1Gi"
            cpu: 1
          limits:
            # 内存数与flink-conf.yaml的taskmanager.heap.size相匹配，注意预留堆外内存空间
            memory: "1536Mi"
            # cpu数与TASK_MANAGER_NUMBER_OF_TASK_SLOTS相等
            cpu: 1
      volumes:
        - name: hdfs-conf
          configMap:
            name: hdfs-conf
        - name: flink-conf
          configMap:
            name: flink-conf
      securityContext:
        runAsUser: 1100
        fsGroup: 1100
